# kinivideo

./: .gitignore  Makefile  README.md  api.py  config.py  jobs.py  main.py  models.py  pipeline.py  pyproject.toml  recipes.py  repository.py  source_adapters.py  storage.py
docs/: prd.md  research.md  technical-design.md
tests/: test_api.py
web/: index.html  package.json
web/src/: App.tsx  styles.css
web/src/pages/: IngestPage.tsx  JobPage.tsx
