[project]
name = "kinivideo"
version = "0.1.0"
description = "Replay-first AI clipping workflow for TikTok LIVE creators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "pydantic>=2.11.7",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
